[sti-profiling] Updated star_tracking_optimization.ipynb

--- a/sti-profiling/star_tracking_optimization.ipynb
+++ b/sti-profiling/star_tracking_optimization.ipynb
@@ -4,29 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<style>\n",
+    "\n",
+    ".MathJax {\n",
+    "font-size: 1.1em;\n",
+    "}\n",
+    "\n",
+    "</style>\n",
+    "\n",
+    "\n",
     "# STAR Tracking Optimization Studies\n",
     "\n",
     "We discuss possible improvements in track reconstruction algorithms.\n",
     "\n",
     "\n",
+    "<!-- START doctoc generated TOC please keep comment here to allow auto update -->\n",
+    "<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->\n",
+    "\n",
+    "\n",
     "- [Alternative Implementations](#alternative-implementations)\n",
-    "  - [errPropag6](#errpropag6-1)\n",
-    "  - [joinTwo](#jointwo-1)\n",
+    "  - [errPropag6()](#errpropag6)\n",
+    "  - [joinTwo()](#jointwo)\n",
     "- [Benchmarking](#benchmarking)\n",
     "  - [How to build](#how-to-build)\n",
     "  - [Running tests for errPropag6()](#running-tests-for-errpropag6)\n",
     "  - [Running tests for joinTwo()](#running-tests-for-jointwo)\n",
     "- [Results](#results)\n",
-    "  - [errPropag6()](#errpropag6-2)\n",
-    "  - [joinTwo()](#jointwo-2)\n",
+    "  - [errPropag6()](#errpropag6-1)\n",
+    "  - [joinTwo()](#jointwo-1)\n",
     "  - [test-eigen](#test-eigen)\n",
     "- [Study of Sti re-fitting routine `joinTwo()`](#study-of-sti-re-fitting-routine-jointwo)\n",
     "- [Summary and Outlook](#summary-and-outlook)\n",
     "- [Open questions and to-do list](#open-questions-and-to-do-list)\n",
     "- [Appendix](#appendix)\n",
-    "  - [errPropag6](#errpropag6-3)\n",
+    "  - [errPropag6()](#errpropag6-2)\n",
     "    - [Estimating rate of zero matrix elements](#estimating-rate-of-zero-matrix-elements)\n",
     "    - [Input raw data file](#input-raw-data-file)\n",
+    "\n",
+    "<!-- END doctoc generated TOC please keep comment here to allow auto update -->\n",
     "\n",
     "\n",
     "Profiling of `StiMaker::Make()` in `libStiMaker.so` is done by using the\n",
@@ -53,6 +68,40 @@
     "From the reconstruction job log file it appears ~80% of the total time is spent\n",
     "in `StiMaker::Make()`.\n",
     "\n",
+    "\n",
+    "| File                                | Notes            | # Events reg/callgrind | StiMaker, % | joinTwo(), % | errPropag6(), %\n",
+    "| :---:                               | :---:            | :---:                  | :---:       | :---:        | :---:\n",
+    "| st_physics_17072001_raw_3500002.daq | [1](#tbl_note_1) | 300/20                 | 44          | 22           | 7\n",
+    "| st_physics_18069061_raw_2000021.daq | [2](#tbl_note_2) | /10                    | 79          |              | \n",
+    "| st_physics_18060106_raw_0000008.daq | [2](#tbl_note_2) | /10                    | 79          |              | \n",
+    "\n",
+    "\n",
+    "**Notes:**\n",
+    "\n",
+    "For data reconstruction options see <http://www.star.bnl.gov/devcgi/dbProdOptionRetrv.pl>\n",
+    "\n",
+    "<a name=\"tbl_note_1\"></a>\n",
+    "**[1]** Official reco options for \"auau 200GeV run 2016 st_hlt production for\n",
+    "the second period after run number 17062047 with StiCA and without HFT tracking\"\n",
+    "\n",
+    "    \"DbV20161001 P2016a StiCA mtd mtdCalib btof picoWrite PicoVtxVpd BEmcChkStat -evout CorrX OSpaceZ2 OGridLeak3D -hitfilt\"\n",
+    "    \"DbV20161001 P2016a Sti   mtd mtdCalib btof picoWrite PicoVtxVpd BEmcChkStat -evout CorrX OSpaceZ2 OGridLeak3D -hitfilt\"\n",
+    "\n",
+    "    get_file_list.pl -keys path,filename,events -cond filename~st_physics_%,runnumber[]17072000-17072047,sanity=1,filetype=online_daq -delim / -limit 10\n",
+    "\n",
+    "<a name=\"tbl_note_2\"></a>\n",
+    "**[2]** Official reco options for \"pp 510GeV run 2017 TOF, TPC dE/dx, MTD, and\n",
+    "BeamLine calibration production\"\n",
+    "\n",
+    "    \"DbV20170718 pp2017 mtd btof -beamline BEmcChkStat StiCA CorrX OSpaceZ2 OGridLeakFull -hitfilt KeepTpcHit\"\n",
+    "    \"DbV20170718 pp2017 mtd btof -beamline BEmcChkStat Sti   CorrX OSpaceZ2 OGridLeakFull -hitfilt KeepTpcHit\"\n",
+    "\n",
+    "\n",
+    "<script src=\"https://rawgit.com/plexoos/1761ed7ff32df034917014a6fb26fb93/raw/91d34ef9c079fb1a3b9c6d6f5a3d3b28786c670e/custom.js\"></script>\n",
+    "\n",
+    "<a id=\"button\">Show/hide</a>\n",
+    "\n",
+    "<div id=\"item\">\n",
     "\n",
     "<pre>\n",
     "QA :INFO  - QAInfo: Done with Event [no. 10/run 18069061/evt. 1467682/Date.Time 20170311.13732/sta 0] Real Time =     758.06 seconds Cpu Time =      757.25 seconds\n",
@@ -83,6 +132,8 @@
     "StAnalysisMaker:INFO  - StAnalysisMaker::Finish() Processed 10 events.\n",
     "</pre>\n",
     "\n",
+    "</div>\n",
+    "\n",
     "\n",
     "<!--\n",
     "How much time did it take to run this callgrind job?\n",
@@ -111,7 +162,7 @@
     "to the existing Sti functions for the same input.\n",
     "\n",
     "\n",
-    "<a name=\"errpropag6-1\"></a>\n",
+    "<a name=\"errpropag6\"></a>\n",
     "\n",
     "## errPropag6()\n",
     "\n",
@@ -131,15 +182,19 @@
     "* [eigen.h](../test-StiTrackNode-errPropag6/eigen.h) - Vectorized calculation based on `Eigen` library\n",
     "\n",
     "\n",
-    "<a name=\"jointwo-1\"></a>\n",
+    "<a name=\"jointwo\"></a>\n",
     "\n",
     "## joinTwo()\n",
     "\n",
     "This function calculates the weighted average of two multi-dimensional vectors\n",
     "\n",
-    "    M = (W_1 + W_2)^-1 (W_1 * X_1 + W_2 * X_2)\n",
-    "    W = (W_1 + W_2)^-1\n",
-    "    chi2 = ...\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "    M &= \\bigl( W_1 + W_2 \\bigr)^{-1} \\bigl(W_1 X_1 + W_2 X_2 \\bigr)\\\\\n",
+    "    W &= \\bigl( W_1 + W_2 \\bigr)^{-1}\\\\\n",
+    "    \\chi^2 &= ...\\\\\n",
+    "\\end{align}\n",
+    "$$\n",
     "\n",
     "Various implementations of `StiTrackNodeHelper::joinTwo()`\n",
     "\n",
@@ -189,16 +244,16 @@
     "\n",
     "To compile the tests do:\n",
     "\n",
-    "    $ cd my-tests\n",
-    "    $ mkdir build && cd build\n",
-    "    $ cmake -D EIGEN_INCLUDE_DIR=~/eigen-67e894c6cd8f/ \\\n",
-    "            -D CMAKE_CXX_FLAGS=\"<cxx_flags> -D NDEBUG\" ../\n",
-    "    $ cmake --build ./ -- VERBOSE=1\n",
+    "    cd my-tests\n",
+    "    mkdir build && cd build\n",
+    "    cmake -D EIGEN_INCLUDE_DIR=~/eigen-67e894c6cd8f/ \\\n",
+    "          -D CMAKE_CXX_FLAGS=\"<cxx_flags> -D NDEBUG\" ../\n",
+    "    cmake --build ./ -- VERBOSE=1\n",
     "\n",
     "A desired target may be specified, e.g.:\n",
     "\n",
-    "    $ cmake --build ./ --target test-StiTrackNode-errPropag6\n",
-    "    $ cmake --build ./ --target test-StiTrackNodeHelper-joinTwo\n",
+    "    cmake --build ./ --target test-StiTrackNode-errPropag6\n",
+    "    cmake --build ./ --target test-StiTrackNodeHelper-joinTwo\n",
     "\n",
     "Currenlty we define the following sets of `gcc` compiler flags:\n",
     "\n",
@@ -224,7 +279,7 @@
     "Benchmark one of the `StiTrackNode::errPropag6()` implementations by running\n",
     "the test as:\n",
     "\n",
-    "    $ test-StiTrackNode-errPropag6 <test_func_name> <n_iterations> <freq_of_zeros> <verbosity>\n",
+    "    test-StiTrackNode-errPropag6 <test_func_name> <n_iterations> <freq_of_zeros> <verbosity>\n",
     "\n",
     "with the following values\n",
     "\n",
@@ -241,7 +296,7 @@
     "Different implementations of `StiTrackNodeHelper::joinTwo()` can be\n",
     "benchmarked similar to `StiTrackNode::errPropag6()`\n",
     "\n",
-    "    $ test-StiTrackNodeHelper-joinTwo <test_func_name> <n_iterations> <verbosity>\n",
+    "    test-StiTrackNodeHelper-joinTwo <test_func_name> <n_iterations> <verbosity>\n",
     "\n",
     "with the following values\n",
     "\n",
@@ -255,7 +310,7 @@
     "\n",
     "# Results\n",
     "\n",
-    "<a name=\"errpropag6-2\"></a>\n",
+    "<a name=\"errpropag6-1\"></a>\n",
     "\n",
     "## errPropag6()\n",
     "\n",
@@ -282,7 +337,7 @@
     "</iframe>\n",
     "\n",
     "\n",
-    "<a name=\"jointwo-2\"></a>\n",
+    "<a name=\"jointwo-1\"></a>\n",
     "\n",
     "## joinTwo()\n",
     "\n",
@@ -308,7 +363,9 @@
     "\n",
     "This is a test to calculate the inverse of 6x6 matrices using Eigen\n",
     "\n",
-    "    C = (A + B)^-1\n",
+    "$$\n",
+    "  C = (A + B)^{-1}\n",
+    "$$\n",
     "\n",
     "<!--For details see code in [test-eigen-inverse.cxx](test-eigen-inverse.cxx)-->\n",
     "\n",
@@ -346,8 +403,9 @@
     "                                                  double *PJ,       double *EJ);\n",
     "```\n",
     "\n",
-    "\n",
-    "    P = P(x, y, z, phi, 1/Pt, tanL)\n",
+    "$$\n",
+    "  P = P \\left( x, y, z, \\phi, 1/P_T, \\tan\\Lambda \\right)\n",
+    "$$\n",
     "\n",
     "Plots of input distributions and the analysis of `joinTwo()` calls can be found\n",
     "at <http://nbviewer.jupyter.org/github/plexoos/my-tests/blob/master/sti-profiling/sti_joinTwo_inputs.ipynb>\n",
@@ -419,21 +477,21 @@
     "\n",
     "A few useful commands to check supported and enabled options in `gcc`:\n",
     "\n",
-    "    $ gcc -march=native -Q --help=target\n",
-    "    $ gcc -march=native -E -v - </dev/null 2>&1 | grep cc1\n",
-    "    $ gcc -march=native -mno-avx -dM -E - < /dev/null | egrep \"SSE|AVX\"\n",
+    "    gcc -march=native -Q --help=target\n",
+    "    gcc -march=native -E -v - </dev/null 2>&1 | grep cc1\n",
+    "    gcc -march=native -mno-avx -dM -E - < /dev/null | egrep \"SSE|AVX\"\n",
     "\n",
     "\n",
-    "<a name=\"errpropag6-3\"></a>\n",
+    "<a name=\"errpropag6-2\"></a>\n",
     "\n",
-    "## errPropag6\n",
+    "## errPropag6()\n",
     "\n",
     "* `main-errPropag6-vs-trasat-output.cxx` compares the output of `errPropag6()`\n",
     "to that of `TCL::trasat()`. Both functions calculate the matrix operation given\n",
     "by `ASA^T` with A, S, and A^T being 6x6 matrices. The test can be compiled at\n",
     "ideone (http://ideone.com/tI1MgY) or by simply doing:\n",
     "\n",
-    "    $ g++ -std=c++11 main-errPropag6-vs-trasat-output.cxx\n",
+    "    g++ -std=c++11 main-errPropag6-vs-trasat-output.cxx\n",
     "\n",
     "* `main.cxx` profiles `errPropag6()` in its original and modified versions. See\n",
     "below for details.\n",
@@ -461,9 +519,13 @@
     "\n",
     "The processing options and the input file used in this test\n",
     "\n",
-    "    $ root4star -l -b -q 'bfc.C(1, 10, \"pp2017, btof, mtd, pp2pp, fmsDat, fmsPoint, fpsDat, BEmcChkStat, QAalltrigs, CorrX, OSpaceZ2, OGridLeak3D, -hitfilt\", \"<input_daq_file>\")'\n",
+    "    root4star -l -b -q 'bfc.C(1, 10, \"pp2017, btof, mtd, pp2pp, fmsDat, fmsPoint, fpsDat, BEmcChkStat, QAalltrigs, CorrX, OSpaceZ2, OGridLeak3D, -hitfilt\", \"<input_daq_file>\")'\n",
     "\n",
-    "    <input_daq_file> = st_physics_18069061_raw_2000021.daq"
+    "    <input_daq_file> = st_physics_18069061_raw_2000021.daq\n",
+    "\n",
+    "\n",
+    "\n",
+    "<span style='font-size: 300%; font-weight: bold;'><a style=\"position: fixed; bottom:5%; right:5%;\" href=\"#top\">&#8679;</a></span>"
    ]
   }
  ],
