[sti-profiling] Updated star_tracking_optimization.ipynb

--- a/sti-profiling/star_tracking_optimization.ipynb
+++ b/sti-profiling/star_tracking_optimization.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<script src=\"https://rawgit.com/plexoos/1761ed7ff32df034917014a6fb26fb93/raw/7284042d56fed933ac595ca5f81c632595d68895/custom.js\"\">\n",
+    "</script>\n",
+    "\n",
+    "This Jupyter notebook hides all input cells on load. To toggle input\n",
+    "cell's visibility click on the next link:\n",
+    "<a id=\"toggle_all_input\" href=\"#\" data-show-input=\"false\" onclick=\"toggleAllInput(this); return false;\">Show all input</a>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,18 +26,28 @@
     "font-size: 1.1em;\n",
     "}\n",
     "\n",
+    ".tableplain {\n",
+    "\tvertical-align: top;\n",
+    "}\n",
+    "\n",
     "</style>\n",
     "\n",
     "\n",
     "# STAR Tracking Optimization Studies\n",
     "\n",
-    "We discuss possible improvements in track reconstruction algorithms.\n",
+    "In this work we discuss and propose potential improvements in the track\n",
+    "reconstruction algorithms used by the STAR experiment. The event reconstruction\n",
+    "requires a significant amount of CPU resources. Therefore, the objective of this\n",
+    "study is to find bottle necks in the code and reduce the overall running time as\n",
+    "much as possible.\n",
     "\n",
     "\n",
     "<!-- START doctoc generated TOC please keep comment here to allow auto update -->\n",
     "<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->\n",
     "\n",
     "\n",
+    "- [Introduction](#introduction)\n",
+    "  - [Timing Track Reconstruction Algorithm](#timing-track-reconstruction-algorithm)\n",
     "- [Alternative Implementations](#alternative-implementations)\n",
     "  - [errPropag6()](#errpropag6)\n",
     "  - [joinTwo()](#jointwo)\n",
@@ -44,21 +70,35 @@
     "<!-- END doctoc generated TOC please keep comment here to allow auto update -->\n",
     "\n",
     "\n",
-    "Profiling of `StiMaker::Make()` in `libStiMaker.so` is done by using the\n",
-    "`callgrind` tool. We reconstruct ten events from a \\*.daq file (Run 17) keeping\n",
-    "the `Make()` calls properly isolated (need a reference to the corresponding\n",
-    "branch in `star-sti`).\n",
     "\n",
-    "[<img src=\"call_graph_StiMaker_thumb.png\" width=\"75%\"/>](call_graph_StiMaker.pdf)\n",
+    "# Introduction\n",
+    "\n",
+    "\n",
+    "## Timing Track Reconstruction Algorithm\n",
+    "\n",
+    "We start by assessing the performance of the track reconstruction code in the\n",
+    "latest library release [ref needed - ???]. The total time of reconstruction\n",
+    "jobs executed over raw data is measured for three different RHIC Runs completed\n",
+    "in 2017, 2016, and 2015. The timing is done using **300 events** with job\n",
+    "options identical to those used in the official reconstruction. The number of\n",
+    "minutes along with the fraction of time spent in the actual reconstruction\n",
+    "algorithm (`StiMaker::Make()`) reported in Table [[#](#tbl_sti_prof)].\n",
+    "\n",
+    "Profiling of `StiMaker::Make()` in `libStiMaker.so` is done by using the\n",
+    "`callgrind` tool. We reconstruct **20 events** using the same input data and\n",
+    "keeping the `Make()` calls properly isolated (need a reference to the\n",
+    "corresponding branch in `star-sti`).\n",
+    "\n",
+    "[<img src=\"call_graph_StiMaker_thumb.png\" width=\"55%\"/>](call_graph_StiMaker.pdf)\n",
     "\n",
     "The sampling data collected with `callgrind` show that the following two\n",
     "functions use significant franctions of the total time spent in the\n",
     "`StiMaker::Make()` routine:\n",
     "\n",
-    "- `StiTrackNode::errPropag6()` ~10%\n",
-    "- `StiTrackNodeHelper::joinTwo()` ~30%\n",
+    "- `StiTrackNode::errPropag6()` ~7%\n",
+    "- `StiTrackNodeHelper::joinTwo()` ~20%\n",
     "\n",
-    "<table style=\"width:60%\">\n",
+    "<table style=\"width:50%\">\n",
     "<tr>\n",
     "<td width=\"60%\"> <img src=\"call_graph_joinTwo.png\"/> </td>\n",
     "<td width=\"40%\"> <img src=\"call_graph_errPropag6.png\"/> </td>\n",
@@ -69,32 +109,121 @@
     "in `StiMaker::Make()`.\n",
     "\n",
     "\n",
-    "| File                                | Notes            | # Events reg/callgrind | StiMaker, % | joinTwo(), % | errPropag6(), %\n",
-    "| :---:                               | :---:            | :---:                  | :---:       | :---:        | :---:\n",
-    "| st_physics_17072001_raw_3500002.daq | [1](#tbl_note_1) | 300/20                 | 44          | 22           | 7\n",
-    "| st_physics_18069061_raw_2000021.daq | [2](#tbl_note_2) | /10                    | 79          |              | \n",
-    "| st_physics_18060106_raw_0000008.daq | [2](#tbl_note_2) | /10                    | 79          |              | \n",
+    "<a name=\"tbl_sti_prof\"></a>\n",
     "\n",
+    "<table>\n",
     "\n",
+    "<thead>\n",
+    "<tr>\n",
+    "<th> File\n",
+    "<th> Notes\n",
+    "<th>\n",
+    "<th> StiMaker, % (total mins)\n",
+    "<th> joinTwo(), %\n",
+    "<th> errPropag6(), %\n",
+    "<th>\n",
+    "</thead>\n",
+    "\n",
+    "<tr>\n",
+    "<td rowspan=2> st_physics_18060106_raw_0000008.daq <td rowspan=2> [1](#tbl_note_1) \n",
+    " <td> Sti   <td> 57 (83) <td> 28 <td> 9  <td>\n",
+    "\n",
+    "<tr>\n",
+    " <td> StiCA <td> 63 (97) <td> 23 <td> 7 <td>\n",
+    "\n",
+    "<tr>\n",
+    "<td rowspan=2> st_physics_17072001_raw_3500002.daq <td rowspan=2> [2](#tbl_note_2)\n",
+    " <td> Sti <td> 44 (155) <td> 22 <td> 7 <td>\n",
+    "\n",
+    "<tr>\n",
+    " <td> StiCA <td> 46 (177) <td> 19 <td> 6.4 <td>\n",
+    "\n",
+    "<tr>\n",
+    "<td> st_physics_16067017_raw_1000020.daq <td> [3](#tbl_note_3)\n",
+    " <td> Sti <td> 34 (67) <td> 20.4 <td> 7.1 <td>\n",
+    "\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "<p>Toggle next:\n",
+    "<a href='#' onclick='toggleNextInput(this);return false;'>input</a> - \n",
+    "<a href='#' onclick='toggleNextOutput(this);return false;'>output</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "\n",
+    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "\n",
+    "x = ['18060106', '17072001', '16067017']\n",
+    "\n",
+    "time_frac_joinTwo = {\n",
+    "    'x': x,\n",
+    "    'y': [28, 22, 20.4],\n",
+    "    'type': 'bar'\n",
+    "}\n",
+    "\n",
+    "time_frac_errPropag6 = {\n",
+    "    'x': x,\n",
+    "    'y': [9, 7, 7.1],\n",
+    "    'type': 'bar'\n",
+    "}\n",
+    "\n",
+    "plotly.offline.iplot(\n",
+    "{\n",
+    "    'data': [time_frac_joinTwo, time_frac_errPropag6],\n",
+    "    'layout': {\n",
+    "        'xaxis': {'type': 'category'},\n",
+    "        'barmode': 'stack',\n",
+    "        'shapes': [{'type': 'line', 'x0': 0, 'y0': 100, 'x1': 2, 'y1': 100}]\n",
+    "    }\n",
+    "}, show_link = False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Notes:**\n",
     "\n",
     "For data reconstruction options see <http://www.star.bnl.gov/devcgi/dbProdOptionRetrv.pl>\n",
     "\n",
+    "\n",
     "<a name=\"tbl_note_1\"></a>\n",
-    "**[1]** Official reco options for \"auau 200GeV run 2016 st_hlt production for\n",
+    "**[1]** Official reco options for \"**pp 510GeV run 2017** TOF, TPC dE/dx, MTD, and\n",
+    "BeamLine calibration production\"\n",
+    "\n",
+    "    \"DbV20170718 pp2017 mtd btof -beamline BEmcChkStat [Sti|StiCA] CorrX OSpaceZ2 OGridLeakFull -hitfilt KeepTpcHit\"\n",
+    "\n",
+    "\n",
+    "<a name=\"tbl_note_2\"></a>\n",
+    "**[2]** Official reco options for \"**auau 200GeV run 2016** st_hlt production for\n",
     "the second period after run number 17062047 with StiCA and without HFT tracking\"\n",
     "\n",
-    "    \"DbV20161001 P2016a StiCA mtd mtdCalib btof picoWrite PicoVtxVpd BEmcChkStat -evout CorrX OSpaceZ2 OGridLeak3D -hitfilt\"\n",
-    "    \"DbV20161001 P2016a Sti   mtd mtdCalib btof picoWrite PicoVtxVpd BEmcChkStat -evout CorrX OSpaceZ2 OGridLeak3D -hitfilt\"\n",
+    "    \"DbV20161001 P2016a [Sti|StiCA] mtd mtdCalib btof picoWrite PicoVtxVpd BEmcChkStat -evout CorrX OSpaceZ2 OGridLeak3D -hitfilt\"\n",
     "\n",
     "    get_file_list.pl -keys path,filename,events -cond filename~st_physics_%,runnumber[]17072000-17072047,sanity=1,filetype=online_daq -delim / -limit 10\n",
     "\n",
-    "<a name=\"tbl_note_2\"></a>\n",
-    "**[2]** Official reco options for \"pp 510GeV run 2017 TOF, TPC dE/dx, MTD, and\n",
-    "BeamLine calibration production\"\n",
     "\n",
-    "    \"DbV20170718 pp2017 mtd btof -beamline BEmcChkStat StiCA CorrX OSpaceZ2 OGridLeakFull -hitfilt KeepTpcHit\"\n",
-    "    \"DbV20170718 pp2017 mtd btof -beamline BEmcChkStat Sti   CorrX OSpaceZ2 OGridLeakFull -hitfilt KeepTpcHit\"\n",
+    "<a name=\"tbl_note_3\"></a>\n",
+    "**[3]** Official reco options for \"**pp 200GeV run 2015** production without HFT\n",
+    "tracking and with PPV_W mode cut for vertex finding\"\n",
+    "\n",
+    "    \"DbV20160418 pp2015c btof mtd mtdCalib pp2pp fmsDat fmsPoint fpsDat BEmcChkStat -evout CorrX OSpaceZ2 OGridLeak3D -hitfilt\"\n",
+    "\n",
     "\n",
     "\n",
     "<script src=\"https://rawgit.com/plexoos/1761ed7ff32df034917014a6fb26fb93/raw/91d34ef9c079fb1a3b9c6d6f5a3d3b28786c670e/custom.js\"></script>\n",
@@ -107,40 +236,32 @@
     "QA :INFO  - QAInfo: Done with Event [no. 10/run 18069061/evt. 1467682/Date.Time 20170311.13732/sta 0] Real Time =     758.06 seconds Cpu Time =      757.25 seconds\n",
     "...\n",
     "QA :INFO  - QAInfo:Run is finished at Date/Time 20170428/141636; Total events processed :10 and not completed: 0\n",
-    "QA :INFO  - Run completed \n",
+    "QA :INFO  - Run completed\n",
     "QA :INFO  - =================================================================================\n",
-    "QA :INFO  - QAInfo:Chain            StBFChain::bfc                  Ast =7287.85        Cpu =6767.55 \n",
+    "QA :INFO  - QAInfo:Chain            StBFChain::bfc                  Ast =7287.85        Cpu =6767.55\n",
     "...\n",
-    "QA :INFO  - QAInfo:Maker          StTreeMaker::outputStream         Ast = 71.40( 1.0%) Cpu = 65.34( 1.0%) \n",
-    "QA :INFO  - QAInfo:Maker       StEventQAMaker::EventQA              Ast = 14.64( 0.2%) Cpu = 12.41( 0.2%) \n",
-    "QA :INFO  - QAInfo:Maker         StMuDstMaker::MuDst                Ast = 78.26( 1.1%) Cpu = 71.64( 1.1%) \n",
+    "QA :INFO  - QAInfo:Maker          StTreeMaker::outputStream         Ast = 71.40( 1.0%) Cpu = 65.34( 1.0%)\n",
+    "QA :INFO  - QAInfo:Maker       StEventQAMaker::EventQA              Ast = 14.64( 0.2%) Cpu = 12.41( 0.2%)\n",
+    "QA :INFO  - QAInfo:Maker         StMuDstMaker::MuDst                Ast = 78.26( 1.1%) Cpu = 71.64( 1.1%)\n",
     "...\n",
-    "QA :INFO  - QAInfo:Maker     StBTofMatchMaker::btofMatch            Ast =  8.98( 0.1%) Cpu =  8.08( 0.1%) \n",
-    "QA :INFO  - QAInfo:Maker        StdEdxY2Maker::dEdxY2               Ast =526.51( 7.2%) Cpu =497.28( 7.3%) \n",
+    "QA :INFO  - QAInfo:Maker     StBTofMatchMaker::btofMatch            Ast =  8.98( 0.1%) Cpu =  8.08( 0.1%)\n",
+    "QA :INFO  - QAInfo:Maker        StdEdxY2Maker::dEdxY2               Ast =526.51( 7.2%) Cpu =497.28( 7.3%)\n",
     "<b>QA :INFO  - QAInfo:Maker             StiMaker::Sti                  Ast =5705.10(78.3%) Cpu =5356.09(79.1%)</b>\n",
-    "QA :INFO  - QAInfo:Maker StGenericVertexMaker::GenericVertex        Ast =  0.10( 0.0%) Cpu =  0.08( 0.0%) \n",
+    "QA :INFO  - QAInfo:Maker StGenericVertexMaker::GenericVertex        Ast =  0.10( 0.0%) Cpu =  0.08( 0.0%)\n",
     "...\n",
-    "QA :INFO  - QAInfo:Maker        StEmcRawMaker::emcRaw               Ast = 27.77( 0.4%) Cpu =  8.98( 0.1%) \n",
-    "QA :INFO  - QAInfo:Maker     StZdcVertexMaker::StZdcVertexMaker     Ast =  0.03( 0.0%) Cpu =  0.03( 0.0%) \n",
-    "QA :INFO  - QAInfo:Maker              StMaker::tpcChain             Ast =636.53( 8.7%) Cpu =614.18( 9.1%) \n",
-    "QA :INFO  - QAInfo:Maker              StMaker::MtdChain             Ast =171.00( 2.3%) Cpu =106.43( 1.6%) \n",
+    "QA :INFO  - QAInfo:Maker        StEmcRawMaker::emcRaw               Ast = 27.77( 0.4%) Cpu =  8.98( 0.1%)\n",
+    "QA :INFO  - QAInfo:Maker     StZdcVertexMaker::StZdcVertexMaker     Ast =  0.03( 0.0%) Cpu =  0.03( 0.0%)\n",
+    "QA :INFO  - QAInfo:Maker              StMaker::tpcChain             Ast =636.53( 8.7%) Cpu =614.18( 9.1%)\n",
+    "QA :INFO  - QAInfo:Maker              StMaker::MtdChain             Ast =171.00( 2.3%) Cpu =106.43( 1.6%)\n",
     "...\n",
-    "QA :INFO  - QAInfo:Maker       St_geant_Maker::geant                Ast =  9.48( 0.1%) Cpu =  3.09( 0.0%) \n",
+    "QA :INFO  - QAInfo:Maker       St_geant_Maker::geant                Ast =  9.48( 0.1%) Cpu =  3.09( 0.0%)\n",
     "...\n",
-    "QA :INFO  - QAInfo:Maker          St_db_Maker::db                   Ast = 14.62( 0.2%) Cpu = 10.20( 0.2%) \n",
-    "QA :INFO  - QAInfo:Maker            StIOMaker::inputStream          Ast =  1.40( 0.0%) Cpu =  0.72( 0.0%) \n",
+    "QA :INFO  - QAInfo:Maker          St_db_Maker::db                   Ast = 14.62( 0.2%) Cpu = 10.20( 0.2%)\n",
+    "QA :INFO  - QAInfo:Maker            StIOMaker::inputStream          Ast =  1.40( 0.0%) Cpu =  0.72( 0.0%)\n",
     "StAnalysisMaker:INFO  - StAnalysisMaker::Finish() Processed 10 events.\n",
     "</pre>\n",
     "\n",
     "</div>\n",
-    "\n",
-    "\n",
-    "<!--\n",
-    "How much time did it take to run this callgrind job?\n",
-    "\n",
-    "start Fri Apr 28 12:06:20 2017\n",
-    "end   Fri Apr 28 14:16:36 EDT 2017\n",
-    "-->\n",
     "\n",
     "\n",
     "\n",
@@ -246,8 +367,7 @@
     "\n",
     "    cd my-tests\n",
     "    mkdir build && cd build\n",
-    "    cmake -D EIGEN_INCLUDE_DIR=~/eigen-67e894c6cd8f/ \\\n",
-    "          -D CMAKE_CXX_FLAGS=\"<cxx_flags> -D NDEBUG\" ../\n",
+    "    cmake -D EIGEN_INCLUDE_DIR=~/eigen-67e894c6cd8f/ -D CMAKE_CXX_FLAGS=\"<cxx_flags>\" ../\n",
     "    cmake --build ./ -- VERBOSE=1\n",
     "\n",
     "A desired target may be specified, e.g.:\n",
@@ -316,12 +436,31 @@
     "\n",
     "Comparison of various benchmark tests with different compiler options.\n",
     "\n",
-    "<iframe width=\"90%\" height=\"600\" frameborder=\"0\" scrolling=\"yes\" src=\"//plot.ly/~plexoos/40.embed\">\n",
-    "<a href=\"https://plot.ly/~plexoos/40\" target=\"_blank\">\n",
-    "<img src=\"https://plot.ly/~plexoos/40.png\" width=\"90%\"/>\n",
-    "</a>\n",
-    "</iframe>\n",
+    "<p>Toggle next:\n",
+    "<a href='#' onclick='toggleNextInput(this);return false;'>input</a> - \n",
+    "<a href='#' onclick='toggleNextOutput(this);return false;'>output</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "import plotly_csv\n",
     "\n",
+    "plotly_obj = plotly_csv.make_plotly_obj('results_errPropag6.csv')\n",
+    "\n",
+    "plotly.offline.iplot( plotly_obj, show_link = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "40% gain in speed when switching from `orig` to `eigen`\n",
     "\n",
     "<!--27% gain in speed when switching from `orig` to `smatrix` or `orig_no_branch`-->\n",
@@ -341,14 +480,27 @@
     "\n",
     "## joinTwo()\n",
     "\n",
-    "Comparison of various benchmark tests with different compiler options.\n",
+    "Comparison of various benchmark tests with different compiler options."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "import plotly_csv\n",
     "\n",
-    "<iframe width=\"90%\" height=\"600\" frameborder=\"0\" scrolling=\"yes\" src=\"//plot.ly/~plexoos/50.embed\">\n",
-    "<a href=\"https://plot.ly/~plexoos/50\" target=\"_blank\">\n",
-    "<img src=\"https://plot.ly/~plexoos/50.png\" width=\"90%\"/>\n",
-    "</a>\n",
-    "</iframe>\n",
+    "plotly_obj = plotly_csv.make_plotly_obj('results_joinTwo.csv')\n",
     "\n",
+    "plotly.offline.iplot( plotly_obj, show_link = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "20% gain in speed when switching from `orig` to `eigen_packed`\n",
     "\n",
     "22% gain in speed when switching from `orig` to `eigen_packed_float`\n",
@@ -443,7 +595,7 @@
     "* In these tests we take advantage of the vectorization implemented in Eigen for\n",
     "matrix operations, i.e. the \"inner loop\". But is there a way or trick to help\n",
     "Eigen to vectorize the \"outer loop\" over matrix instances even at a cost of data\n",
-    "re-packing? \n",
+    "re-packing?\n",
     "\n",
     "\n",
     "\n",
@@ -553,7 +705,13 @@
    "sideBar": false,
    "skip_h1_title": false,
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "621px",
+    "left": "1942.62px",
+    "right": "58.3833px",
+    "top": "182px",
+    "width": "529px"
+   },
    "toc_section_display": "block",
    "toc_window_display": false
   }
