[sti-profiling] wip

--- a/sti-profiling/star_tracking_optimization.ipynb
+++ b/sti-profiling/star_tracking_optimization.ipynb
@@ -546,6 +546,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "import plotly_csv\n",
+    "\n",
+    "plotly.offline.init_notebook_mode(connected=True)\n",
+    "\n",
+    "plotly_data = plotly_csv.make_plotly_data('results_joinTwo_NxN_5.csv', 'set {: 3d}')\n",
+    "\n",
+    "plotly_obj = {\n",
+    "    'data': plotly_data,\n",
+    "    'layout': {\n",
+    "        'barmode': 'group',\n",
+    "        'hovermode': 'closest',\n",
+    "        'legend': {\n",
+    "            'orientation': 'v',\n",
+    "            'x': 1, 'xanchor': 'left',\n",
+    "            'y': 1, 'yanchor': 'top'\n",
+    "        },\n",
+    "        'yaxis': { 'range': [0, 700] },\n",
+    "        'margin': { 't': 0, 'r': 0, 'b': 20, 'l': 40}\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "plotly.offline.iplot(plotly_obj, show_link=False, link_text=\"\" )\n",
+    "#plotly.offline.plot(plotly_obj, show_link=False, link_text=\"\", include_plotlyjs=False, output_type='div')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
