[branch-compress] Update notebook

--- a/root-branch-compress/compress.ipynb
+++ b/root-branch-compress/compress.ipynb
@@ -130,7 +130,7 @@
     "\n",
     " - Uniform [-100, 100]\n",
     " - Uniform with 5% overflow [-105, 105]\n",
-    " - Normal distributions with sigma = 10, 20, 40"
+    " - Normal distributions with sigma = 10, 15, 20, 25, 30, 35, 40"
    ]
   },
   {
@@ -181,10 +181,18 @@
     "test_file = ROOT.TFile(\"DemoDouble32_flat_nOF.root\")\n",
     "test_tree = test_file.Get(\"T\")\n",
     "\n",
-    "canvas = ROOT.TCanvas(\"canvas_multi_1\", \"canvas\", 1000, 800)\n",
-    "canvas.Divide(2, 5)\n",
+    "canvas = ROOT.TCanvas(\"canvas_multi_1\", \"canvas\", 1000, 1500)\n",
+    "canvas.Divide(2, 9)\n",
     "\n",
-    "branch_names = [\"fD64\", \"fF32\", \"fI16\", \"fR16\", \"fI12\", \"fR12\", \"fI8\", \"fR8\", \"fI4\", \"fR4\"]\n",
+    "branch_names = [\"fD64\", \"fF32\",\n",
+    "                \"fI16\", \"fR16\",\n",
+    "                \"fI14\", \"fR14\",\n",
+    "                \"fI12\", \"fR12\",\n",
+    "                \"fI10\", \"fR10\",\n",
+    "                \"fI8\", \"fR8\",\n",
+    "                \"fI6\", \"fR6\",\n",
+    "                \"fI4\", \"fR4\",\n",
+    "                \"fI2\", \"fR2\"]\n",
     "\n",
     "i_pad = 1\n",
     "\n",
@@ -286,11 +294,19 @@
     "test_file = ROOT.TFile(\"DemoDouble32_gauss_s20.root\")\n",
     "test_tree = test_file.Get(\"T\")\n",
     "\n",
-    "canvas = ROOT.TCanvas(\"canvas_multi_2\", \"canvas\", 1000, 800)\n",
-    "canvas.Divide(2, 6)\n",
+    "canvas = ROOT.TCanvas(\"canvas_multi_2\", \"canvas\", 1000, 1600)\n",
+    "canvas.Divide(2, 10)\n",
     "\n",
     "branch_names = [\"fD64\", \"fF32\",\n",
-    "                \"fI16\", \"fR16\", \"fI12\", \"fR12\", \"fI8\", \"fR8\", \"fI4\", \"fR4\", \"fUSh\", \"fUI\"]\n",
+    "                \"fI16\", \"fR16\",\n",
+    "                \"fI14\", \"fR14\",\n",
+    "                \"fI12\", \"fR12\",\n",
+    "                \"fI10\", \"fR10\",\n",
+    "                 \"fI8\",  \"fR8\",\n",
+    "                 \"fI6\",  \"fR6\",\n",
+    "                 \"fI4\",  \"fR4\",\n",
+    "                 \"fI2\",  \"fR2\",\n",
+    "                \"fUSh\", \"fUI\"]\n",
     "\n",
     "i_pad = 1\n",
     "\n",
@@ -457,10 +473,19 @@
    },
    "outputs": [],
    "source": [
-    "canvas = ROOT.TCanvas(\"canvas_multi_3\", \"canvas\", 1000, 800)\n",
-    "canvas.Divide(2, 6)\n",
+    "canvas = ROOT.TCanvas(\"canvas_multi_3\", \"canvas\", 1000, 1600)\n",
+    "canvas.Divide(2, 10)\n",
     "\n",
-    "branch_names = [\"fD64\", \"fF32\", \"fI16\", \"fR16\", \"fI12\", \"fR12\", \"fI8\", \"fR8\", \"fI4\", \"fR4\", \"fUSh\", \"fUI\"]\n",
+    "branch_names = [\"fD64\", \"fF32\",\n",
+    "                \"fI16\", \"fR16\",\n",
+    "                \"fI14\", \"fR14\",\n",
+    "                \"fI12\", \"fR12\",\n",
+    "                \"fI10\", \"fR10\",\n",
+    "                 \"fI8\",  \"fR8\",\n",
+    "                 \"fI6\",  \"fR6\",\n",
+    "                 \"fI4\",  \"fR4\",\n",
+    "                 \"fI2\",  \"fR2\",\n",
+    "                \"fUSh\",  \"fUI\"]\n",
     "\n",
     "i_pad = 1\n",
     "\n",
@@ -486,7 +511,7 @@
     "The distributions of relative precisions very well agree with the expected machine\n",
     "accuracy for the requested number of bits in the significand (//[0, 0, nbits]).\n",
     "\n",
-    "$$ \\Big| \\frac{x - x_t}{x} \\Big| \\le 2^{\\text{nbits}+1}$$\n",
+    "$$ \\Big| \\frac{x - x_t}{x} \\Big| \\le 2^{-(\\text{nbits}+1)}$$\n",
     "\n",
     "Note\n",
     "that the actual number of bits is nbits + 1 because there is sign bit. The case\n",
@@ -513,7 +538,7 @@
     "canvas.Divide(3, 9)\n",
     "\n",
     "branch_names = [\n",
-    "    \"fD64\", \"\", \"\",\n",
+    "    \"fD64\", \"fF32\", \"\",\n",
     "    \"fR16F\", \"(fD64 - fR16F)/fD64\", \"(fD64 - fR16F)/(fMax - fMin)\",\n",
     "    \"fR14F\", \"(fD64 - fR14F)/fD64\", \"(fD64 - fR14F)/(fMax - fMin)\",\n",
     "    \"fR12F\", \"(fD64 - fR12F)/fD64\", \"(fD64 - fR12F)/(fMax - fMin)\",\n",
@@ -629,9 +654,9 @@
    "toc_cell": false,
    "toc_position": {
     "height": "650.083px",
-    "left": "1767px",
-    "right": "163px",
-    "top": "74.85px",
+    "left": "1846px",
+    "right": "84px",
+    "top": "89.85px",
     "width": "600px"
    },
    "toc_section_display": "block",
