[branch-compress] Investigate effect on binning

--- a/root-branch-compress/compress.ipynb
+++ b/root-branch-compress/compress.ipynb
@@ -602,6 +602,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Bin width for values with truncated mantissa\n",
+    "\n",
+    "In order to avoid weird looking distributions one should choose the bin\n",
+    "width to be larger than the absolute precision at the range maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "n_pads = 7\n",
+    "\n",
+    "canvas = ROOT.TCanvas(\"canvas_multi_bins\", \"canvas\", 800, 200*n_pads)\n",
+    "canvas.Divide(1, n_pads)\n",
+    "\n",
+    "# Print out precision for fR8F at different values\n",
+    "for value in range(10, 100, 10):\n",
+    "    abs_precision = value * 2**-9\n",
+    "    print('fR8F abs. precision @ {}: {}' .format(value, abs_precision))\n",
+    "\n",
+    "start_n_bins = 100\n",
+    "\n",
+    "for i_pad in range(1, n_pads+1):\n",
+    "    canvas.cd(i_pad)\n",
+    "    n_bins = start_n_bins if i_pad == 1 else start_n_bins * 2 \n",
+    "    \n",
+    "    # Print out the bin width\n",
+    "    print('fR8F>>h{}({}, -100, 100) ==> bin width: {}'.format(i_pad, n_bins, 200/n_bins))\n",
+    "    \n",
+    "    test_tree.Draw( 'fR8F>>h{}({}, -100, 100)'.format(i_pad, n_bins) )\n",
+    "    start_n_bins = n_bins\n",
+    "    i_pad += 1\n",
+    "\n",
+    "canvas.Draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Summary and Conclusions\n",
     "\n",
     "We compared different packing modes of the `Float16_t` type in ROOT for uniformly and\n",
